--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -277,7 +277,13 @@ p{
 .book-online{
   position: fixed;
   right: -30px;
-  top: 30%;
+  top: 20%;
+  transform: rotateZ(-90deg);
+}
+.book-online-1{
+  position: fixed;
+  right: -30px;
+  top: 50%;
   transform: rotateZ(-90deg);
 }
 
