--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -27,7 +27,7 @@ nav {
     color: #f8b417;
     font-weight: bold;
     &:hover {
-        color: #fff;
+        color: #fff !important;
     }
 }
 .line {
