--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -357,3 +357,23 @@ p{
   color: #333;
   text-decoration: none;
 }
+.c-flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.c1-flex{
+  display: flex;
+  justify-content: center !important;
+  // align-items: center;
+  flex-direction: row;
+  padding-left: 30%;
+}
+.c2-flex{
+  display: flex;
+  justify-content: center !important;
+  // align-items: center;
+  // flex-direction: row;
+  padding-left: 15%;
+}
