--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -276,13 +276,13 @@ p{
 }
 .book-online{
   position: fixed;
-  right: -30px;
+  right: -35px;
   top: 20%;
   transform: rotateZ(-90deg);
 }
 .book-online-1{
   position: fixed;
-  right: -30px;
+  right: -39px;
   top: 50%;
   transform: rotateZ(-90deg);
 }
@@ -375,5 +375,5 @@ p{
   justify-content: center !important;
   // align-items: center;
   // flex-direction: row;
-  padding-left: 15%;
+  // padding-left: 15%;
 }
